# SimulationCourse

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: linux.yaml  macos.yaml  windows.yaml
include/: mass_spring_sytem.h  system.h  types.h
include/timestepper/: euler.h
include/tools/: tobj_reader.h
src/: CMakeLists.txt  mass_spring_sytem.cpp  system.cpp
src/timestepper/: euler.cpp
src/tools/: tobj_reader.cpp
tutorial/: CMakeLists.txt  MassSpring.md
tutorial/siggraph2001/: CMakeLists.txt  cloth.cpp
